feat: add admin workspace detail page and api
